k8s/production/app-root/deployment.yaml
# API service for discovery and port linking
apiVersion: v1
kind: Service
metadata:
  name: root-api-svc
  labels:
    app: root-api
    service: root-api-svc
spec:
  ports:
  - port: 3005
    name: http
  selector:
    app: root-api
---
# API endpoint deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: root-api-deploy
  labels:
    app: root-api
    ver: 0.1.3
    environment: production
    release: address-book-stable
    # releasesha256: "sha256:2749c56d99c7e9c85b97b5fd756a3de07471c44e27695305594ec52e143da937"
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 3
      maxSurge: 2
  selector:
    matchLabels:
      app: root-api
      ver: 0.1.3
    matchExpressions:
      - {key: environment, operator: In, values: [production]}
  template:
    metadata:
      labels:
        app: root-api
        ver: 0.1.3
        environment: production
    #     sha256: "sha256:2749c56d99c7e9c85b97b5fd756a3de07471c44e27695305594ec52e143da937"
    spec:
      containers:
      - name: root-api-container
        image: adamfowleruk/address-book-root-api:v0.1.3
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports: # Note this MUST match the port exposed by the container itself (other you'll get an unresponsive endpoint error)
        - containerPort: 3005
---
