k8s/production/app-root/ingress-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: root-api-entrypoint
  namespace: default
spec:
  type: NodePort
  selector:
    app: root-api
  ports:
  - port: 3005
    targetPort: 3005
    nodePort: 30005
